<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Lablet</string>
    <string name="script_activity_name">Lablet</string>
    <string name="action_done">Done</string>
    <string name="action_experiments">Experiments</string>
    <string name="action_video">Video</string>
    <string name="action_sensors">Sensors</string>
    <string name="action_view">View</string>
    <string name="action_origin">Origin</string>
    <string name="action_analyse">Analyse</string>
    <string name="action_discard">Discard</string>
    <string name="action_help">Help</string>
    <string name="action_apply">Apply</string>
    <string name="length_scale">Length Scale</string>
    <string name="action_calibration">Calibrate</string>
    <string name="action_delete">Delete</string>
    <string name="action_mail">Export</string>
    <string name="action_info">Info</string>
    <string name="action_scripts">Lab Activities</string>
    <string name="standalone_experiments">Single Experiments</string>
    <string name="action_import">Import</string>
    <string name="action_script_options">Script Options</string>
    <string name="script_manager">Lab Activities Manager</string>
    <string name="action_update">Update</string>
    <string name="action_add_remote">Add Remote</string>
    <string name="action_restore_default_scripts">Demos</string>
    <string name="action_track">Track Object</string>
    <string name="text_missing_experiment_data">No experiment data found</string>
</resources>
