<?xml version="1.0" encoding="utf-8"?>
<menu
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto">
  <item
    android:id="@+id/action_settings"
    android:icon="@drawable/ic_action_settings"
    android:title="@string/action_video"
    app:showAsAction="ifRoom|withText" />
  <item
    android:id="@+id/action_sensors"
    android:icon="@drawable/ic_sensor"
    android:title="@string/action_sensors"
    app:showAsAction="ifRoom|withText" />
  <item
    android:id="@+id/action_view"
    android:icon="@drawable/ic_eye"
    android:title="@string/action_view"
    app:showAsAction="ifRoom|withText" />
  <item
    android:id="@+id/action_analyse"
    android:icon="@drawable/ic_chart_line"
    android:title="@string/action_analyse"
    app:showAsAction="ifRoom|withText" />
  <item
    android:id="@+id/action_done"
    android:icon="@drawable/ic_action_back"
    android:title="@string/action_done"
    app:showAsAction="ifRoom|withText" />
</menu>
