<?xml version="1.0" encoding="utf-8"?>
<menu
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto">
  <item
    android:id="@+id/action_mail"
    android:icon="@drawable/ic_action_mail"
    android:title="@string/action_mail"
    app:showAsAction="ifRoom|withText" />
  <item
    android:id="@+id/action_delete"
    android:icon="@drawable/ic_action_delete"
    android:title="@string/action_delete"
    app:showAsAction="ifRoom|withText" />
  <item
    android:id="@+id/action_stand_alone"
    android:icon="@drawable/ic_lab"
    android:title="@string/standalone_experiments"
    app:showAsAction="ifRoom|withText" />
  <item
    android:id="@+id/action_script_options"
    android:icon="@drawable/ic_console"
    android:title="@string/action_script_options"
    app:showAsAction="always" />
  <item
    android:id="@+id/action_info"
    android:icon="@drawable/ic_info"
    android:title="@string/action_info"
    app:showAsAction="ifRoom" />
</menu>
