<?xml version="1.0" encoding="utf-8"?>
<menu
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto">
  <item
    android:id="@+id/action_delete"
    android:icon="@drawable/ic_action_delete"
    android:title="@string/action_delete"
    app:showAsAction="ifRoom|withText" />
  <item
    android:id="@+id/action_update"
    android:icon="@drawable/ic_action_import"
    android:title="@string/action_update"
    app:showAsAction="ifRoom|withText" />
  <item
    android:id="@+id/action_add_remote"
    android:icon="@drawable/ic_action_add"
    android:title="@string/action_add_remote"
    app:showAsAction="ifRoom|withText" />
  <item
    android:id="@+id/action_restore_default_scripts"
    android:icon="@drawable/ic_action_load"
    android:title="@string/action_restore_default_scripts"
    app:showAsAction="ifRoom|withText" />
</menu>
